<resources>
    <string name="app_name">PopularMovies</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="title_activity_detail">Details</string>

    <!-- Preference -->
    <string name="checksorting_key" translatable="false">checksorting_key</string>
    <string name="checksorting_label">Sorting Movies</string>
    <string name="checksorting_default_value" translatable="false">false</string>

    <string name="sorting_key" translatable="false">sort_by</string>
    <string name="sorting_label">Sort order</string>

    <string name="sorting_label_popular">Most popular first</string>
    <string name="sorting_label_rating">Highest-rated first</string>
    <string name="sorting_label_favorite">Favorite</string>

    <string name="sorting_value_popular" translatable="false">popularity.desc</string>
    <string name="sorting_value_rating" translatable="false">vote_average.desc</string>

    <string name="sorting_default_value" translatable="false">popularity.desc</string>

    <string name="favorite_key" translatable="false">favorite_set</string>
    <string name="favorite_label">Favorites</string>
    <string name="favorite_summaryon">Display Favorite Movies</string>
    <string name="favorite_summaryoff">Display All Movies</string>
    <string name="favorite_default_value" translatable="false">false</string>

    <string name="vote_count_default_value">90</string>
    <!-- API -->

    <string name="api_key">6f033c5f82678f75ff76c30995ba38d6</string>
    <string name="api_poster_default_size">w342</string>

    <!-- labels -->
    <string name="label_movie_release_date">Release date:</string>
    <string name="label_movie_overview">Overview</string>
    <string name="label_movie_rating">Rating: </string>
    <string name="label_movie_favorite">Favorite </string>
    <string name="label_movie_trailer">Trailer </string>
    <string name="label_movie_review">Review</string>
    <string name="title_activity_setting">Settings</string>

    <!--Text-->
    <string name="mark_movie_favorite">Mark as Favorite </string>
    <string name="title_activity_detail_activity_fragment">DetailActivityFragment</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
