<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.yyz.android.popularmovies.DetailActivity$DetailActivityFragment">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
         >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_height"

                android:background="@color/title_background"
                android:textSize="40dp"
                android:textColor="@color/title_color"
                android:gravity="center_vertical|left"
                android:paddingLeft="10dp"
                android:layout_marginBottom="16dp"
                android:id="@+id/movie_title" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
               >
                <ImageView
                android:layout_width="@dimen/poster_width"
                android:layout_height="@dimen/poster_height"

                android:id="@+id/movie_poster"
                />
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_movie_release_date"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/movie_release_date_label" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/movie_release_date"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_movie_rating"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/movie_rating_label" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/movie_rating" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_movie_overview"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/movie_overview_label"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/movie_overview"
                />
        </LinearLayout>
    </ScrollView>

</FrameLayout>
